<resources>
    <string name="app_name">Brew Keeper</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="completed">Completed</string>
    <string name="current">Current</string>
    <string name="recipes">Recipes</string>
    <string name="brew_name">Name your brew</string>
    <string name="tea_name">Tea name</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="tea_type">Tea type</string>
    <string name="sugar">Sugar</string>

    <string name="tea_white">White</string>
    <string name="tea_green">Green</string>
    <string name="tea_oolong">Oolong</string>
    <string name="tea_black">Black</string>
    <string name="tea_puerh">Puerh</string>
    <string name="tea_herbal">Herbal</string>
    <string name="tea_other">Other</string>

    <string name="sweetener_white_sugar">White Sugar</string>
    <string name="sweetener_raw_sugar">Raw Sugar</string>
    <string name="sweetener_agave">Agave</string>
    <string name="sweetener_honey">Honey</string>
    <string name="sweetener_other">Other</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete brew</string>
    <string name="action_delete_all">Delete all</string>
    <string name="title_activity_entry">New brew</string>
    <string name="action_select_tea">Select tea type</string>
    <string name="completion_date">Completion Date</string>
    <string name="second_fermentation">Secondary Fermentation</string>
    <string name="first_fermentation">Primary Fermentation</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start brewin\'</string>
    <string name="notes">Add a note</string>
    <string name="new_ingredient">add ingredient</string>
    <string name="timeline_marker">Timeline marker</string>
    <string name="add_ingredient">Add flavor</string>
    <string name="add">Add</string>
    <string name="unit_grams">g</string>
    <string name="default_amount_sweetener">75</string>
    <string name="brew_name_label">Brew name</string>
    <string name="tea_label">Tea</string>
    <string name="notes_hint">Enter your notes here</string>
    <string name="flavors">Flavors</string>
    <string name="stage">Brew Stage</string>
    <string name="create_brew">Create brew</string>
    <string name="stage_primary">1F</string>
    <string name="stage_secondary">2F</string>
    <string name="unit_liters">L</string>
    <string name="water">Water</string>
    <string name="add_flavor">Flavor</string>
    <string name="default_amount">0</string>
    <string name="default_amount_tea">10</string>
    <string name="default_amount_water">1.0</string>

    <plurals name="pluralDays">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <string name="sort_by">Sort by\:</string>
    <string name="sort_name">recipe.name</string>
    <string name="sort_secondary_date">secondaryStartDate</string>
    <string name="sort_end_date">endDate</string>
    <string name="sort_stage">stage</string>
    <string name="sort_recent">secondaryFerment.second</string>
    <string name="sort_time_remaining">endDate</string>

    <string name="add_tea">Add tea</string>
    <string name="action_cancel">Cancel brew</string>
    <string name="select_dates">Select dates</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="mark_complete">Mark complete</string>
    <string name="edit">Edit brew</string>

    <string name="most_recent">Most recent</string>
    <string name="time_remaining">Time remaining</string>
    <string name="title_brews">Brews</string>
    <string name="title_history">History</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_settings">Settings</string>
    <string name="stat_most_brewed">Most brewed recipe</string>
    <string name="stat_favorite_ingredient">Favorite ingredient</string>
    <string name="stat_total_brews">Total brews completed</string>

    <!--<string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>-->

</resources>
