<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/tea_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/card_margin_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/remove_button"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_collapse_circle" />

        <AutoCompleteTextView
            android:id="@+id/tea_name_autocomplete"
            style="@style/MainTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:completionThreshold="1"
            android:hint="@string/tea_name"
            android:inputType="textCapWords|textMultiLine"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            tools:text="Blue Mountain" />

        <Spinner
            android:id="@+id/tea_picker"
            style="@style/LabelTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:spinnerMode="dropdown"
            tools:listitem="@layout/spinner_item_small" />

        <EditText
            android:id="@+id/tea_amount_picker"
            style="@style/LabelTextStyle"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/default_amount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"
            android:selectAllOnFocus="true"
            android:text="@string/default_amount_tea"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/unit_suffix1"
            style="@style/LabelTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/unit_grams" />

    </LinearLayout>

    <View
        android:id="@+id/divider_add_teas"
        style="@style/DividerStyle"
        android:layout_below="@id/tea_item"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

</RelativeLayout>