<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/create_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/create_brew"
                android:textColor="#de000000"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/create_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_text_view"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center_horizontal"
                android:hint="@string/brew_name"
                android:inputType="textCapWords"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                tools:text="Wisteria Blue" />

            <androidx.cardview.widget.CardView
                android:id="@+id/primary_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_edit_text"
                android:layout_marginTop="24dp"
                android:elevation="28dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingTop="30dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="24dp">

                    <TextView
                        android:id="@+id/primary_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_fermentation" />

                    <TextView
                        android:id="@+id/primary_date_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/primary_label"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="16sp"
                        tools:text="March 1, 2019" />

                    <TextView
                        android:id="@+id/tea_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/primary_date_calendar"
                        android:layout_marginTop="20dp"
                        android:text="@string/tea_label" />

                    <LinearLayout
                        android:id="@+id/tea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tea_label"
                        android:layout_marginTop="-8dp"
                        android:layout_marginBottom="-8dp"
                        android:orientation="horizontal">

                        <AutoCompleteTextView
                            android:id="@+id/tea_name_autocomplete"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:hint="@string/tea_name"
                            android:inputType="textCapWords"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            tools:text="Blue Mountain" />

                        <EditText
                            android:id="@+id/tea_amount_picker"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/default_amount_sweetener"
                            android:inputType="number"
                            android:maxLength="3"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorDarkGray"
                            android:textColorHint="@color/colorDarkGray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/unit_suffix1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/unit_grams"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tea_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tea"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/tea_type"
                        android:textColor="@color/colorDarkGray"
                        tools:text="White Tea" />

                    <TextView
                        android:id="@+id/primary_sugar_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tea_picker"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/colorMediumGray"
                        android:textSize="12sp"
                        tools:text="Sugar" />

                    <LinearLayout
                        android:id="@+id/primary_sugar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/primary_sugar_label"
                        android:layout_marginTop="-8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/primary_sugar_picker"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sugar"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="16sp" />


                        <EditText
                            android:id="@+id/sugar_amount_picker"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/default_amount_sweetener"
                            android:inputType="number"
                            android:maxLength="3"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorDarkGray"
                            android:textColorHint="@color/colorDarkGray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/unit_suffix2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/unit_grams"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="16sp" />

                    </LinearLayout>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/secondary_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/primary_card"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="200dp"
                android:elevation="28dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                tools:layout_marginBottom="@dimen/button_width">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="30dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="24dp">

                    <TextView
                        android:id="@+id/secondary_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/second_fermentation" />

                    <TextView
                        android:id="@+id/secondary_date_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/secondary_label"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="16sp"
                        tools:text="March 1, 2019" />

                    <TextView
                        android:id="@+id/secondary_sugar_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/secondary_date_calendar"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/colorMediumGray"
                        android:textSize="12sp"
                        tools:text="Sugar" />

                    <LinearLayout
                        android:id="@+id/secondary_sugar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/secondary_sugar_label"
                        android:layout_marginTop="-8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/secondary_sugar_picker"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sugar"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/secondary_sugar_amount_picker"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/default_amount_sweetener"
                            android:inputType="number"
                            android:maxLength="3"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorDarkGray"
                            android:textColorHint="@color/colorDarkGray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/unit_suffix3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/unit_grams"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/ingredient_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/secondary_sugar"
                        android:layout_marginTop="20dp"
                        android:text="@string/flavors" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/ingredient_chip_group"
                        style="@style/CustomChipColors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ingredient_label"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        app:chipSpacing="8dp" />

                    <TextView
                        android:id="@+id/end_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ingredient_chip_group"
                        android:text="@string/completion_date" />

                    <TextView
                        android:id="@+id/end_date_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/end_label"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="16sp"
                        tools:text="March 1, 2019" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:text="@string/start"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="4dp" />

</RelativeLayout>